# medium_qt

Graphics_View/GraphicsView/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyScene.cpp  MyScene.h  MyView.cpp  MyView.h  main.cpp
Paint_test/PainterTest/: BallAnimation.cpp  BallAnimation.h  BallAnimationGL.cpp  BallAnimationGL.h  CMakeLists.txt  Helper.cpp  Helper.h  main.cpp
Scene_Graph/SceneGraph/: CMakeLists.txt  Main.qml  Triangle.cpp  Triangle.h
